<resources>
    <string name="app_name">Pizzadesigner</string>
    <string name="wie_h_tten_sie_gerne_ihre_pizza">Wie hätten Sie gerne Ihre Pizza?</string>
    <string name="bestellen">Bestellen</string>
    <string name="k_se">Käse</string>
    <string name="wurst">Wurst</string>
    <string name="_3_belag">3. Belag</string>
    <string name="_2_belag">2. Belag</string>
    <string name="_1_belag">1. Belag</string>
    <string name="teig">Teig</string>
    <string name="zur_ck_zu_bestellung">Zurück zu Bestellung</string>
    <string name="best_ttigen">Bestätigen</string>
    <string name="ihre_bestellung_war_nicht_erfolgreich">Ihre Bestellung war nicht erfolgreich</string>
    <string name="ihre_bestellung">Ihre Bestellung</string>
    <string name="order_confirmation_message">Ihre Bestellung wird bestaetigt</string>
</resources>
