<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background1"
        android:orientation="vertical"
        tools:context="com.example.khalessi.pizzabestellen.MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30sp"
            android:gravity="center"
            android:text="@string/wie_h_tten_sie_gerne_ihre_pizza"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:layout_marginLeft="40sp">

            <TableRow android:layout_marginBottom="@dimen/rowMB">

                <TextView
                    android:id="@+id/teigLab"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/labelMR"
                    android:gravity="right"
                    android:text="@string/teig"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/teig"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:color="@color/white"
                    android:entries="@array/teig" />

            </TableRow>

            <TableRow android:layout_marginBottom="@dimen/rowMB">

                <TextView
                    android:id="@+id/baelegeLab"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/labelMR"
                    android:gravity="right"
                    android:textColor="@color/white"
                    android:text="@string/_1_belag"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/belaege"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/belaege" />


            </TableRow>
            <TableRow android:layout_marginBottom="@dimen/rowMB">

                <TextView
                    android:id="@+id/baelegeLabZwei"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/labelMR"
                    android:gravity="right"
                    android:text="@string/_2_belag"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/belaegeZwei"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/belaege" />


            </TableRow>

            <TableRow android:layout_marginBottom="@dimen/rowMB">

                <TextView
                    android:id="@+id/baelegeLabDrei"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/labelMR"
                    android:gravity="right"
                    android:text="@string/_3_belag"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/belaegeDrei"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/belaege" />


            </TableRow>



            <TableRow android:layout_marginBottom="@dimen/rowMB">

                <TextView
                    android:id="@+id/wurstLab"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10sp"
                    android:gravity="right"
                    android:text="@string/wurst"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/wurst"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/wurst" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/kaeseLab"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/labelMR"
                    android:gravity="right"
                    android:text="@string/k_se"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/kaese"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/kaese" />


            </TableRow>


        </TableLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#333"
            android:textColor="@color/white"
            android:layout_margin="20sp"
            android:text="@string/bestellen">

        </Button>

        <TextView
            android:id="@+id/ausgabe"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:textSize="18sp"
            android:textStyle="bold" />


    </LinearLayout>
</ScrollView>
